HEAD only (unreleased)

  New Features

    - TypesTool: TypeInformation classes are now pluggable.
      Any class that implements the TypeInformation interface and is
      a registered meta type can now be used in the TypesTool.

  Bug Fixes

    - 

  Others

    - CMFDefault: Marked 'manage_addCMFSite' as deprecated.
      'CMF Site' no longer shows up in the 'Add' list. To add a new CMF site,
      select 'Configured CMF Site' instead. The 'CMFDefault Site' profile
      creates a new site like those you know from 'CMF Site'.

    - CMFDefault: Cleaned out some super-ancient code for migrating
      or fixing PTK content so it would work with CMF.

    - CatalogTool: Removed deprecated indexes and metadata.
      'Creator' was replaced by 'listCreators', 'portal_type' should be used
      instead of 'meta_type'.

    - CMFCore: Removed some deprecated aliases and constants.

    - Permissions: Removed deprecated oldstyle permission modules.

    - TypeInformation: Removed deprecated Type method.

    - PortalFolder: Removed deprecated _morphSpec() and spec arguments.

    - Portal Types: Removed deprecated _getViewFor / getActionById machinery.
      PortalContent objects might be used as methods, so __call__() still
      returns their default view.

    - CMFDefault and CMFTopic skins: Removed deprecated DTML skins and layers.

    - ActionsTool: Removed deprecated support for oldstyle Action Providers.
      If Action Providers don't implement the ActionProvider interface they
      are now ignored.

    - Workflow: Removed deprecated WorkflowMethod machinery.

CMF 1.5.x

  For a complete list see CHANGES.txt of CMF-1_5-branch.