@@ -6,6 +6,11 @@ HEAD only (unreleased)
       Any class that implements the TypeInformation interface and is
       a registered meta type can now be used in the TypesTool.
 
+  Removed features:
+
+    - The "Access future portal content" was not used anywhere and has been
+      removed. (http://www.zope.org/Collectors/CMF/240)
+
   Bug Fixes
 
     - 
